# api/app/controller/subtitle.go
@@ -1,6 +1,8 @@
 package controller
 
 import (
+	"archive/zip"
+	"io"
 	"subtitle/app/model"
 	"subtitle/gorn"
 
@@ -20,6 +22,7 @@ func (c *SubtitleController) InitRoutes(r *gin.RouterGroup) {
 
 	g := r.Group("subtitles")
 	g.GET("/:id/download", c.Download)
+	g.GET("/:id/json", c.Json)
 
 }
 
@@ -49,4 +52,52 @@ func (s *SubtitleController) Download(ctx *gin.Context) {
 	}
 
 	s.FlashSuccess(ctx, "ok", map[string]any{"subtitle": subtitle})
+}
+
+func readZipFile(zipPath string) (map[string]string, error) {
+	r, err := zip.OpenReader(zipPath)
+	if err != nil {
+		return nil, err
+	}
+	defer r.Close()
+
+	files := make(map[string]string)
+
+	for _, f := range r.File {
+		rc, err := f.Open()
+		if err != nil {
+			return nil, err
+		}
+		content, err := io.ReadAll(rc)
+		rc.Close()
+		if err != nil {
+			return nil, err
+		}
+
+		files[f.FileInfo().Name()] = string(content)
+	}
+
+	return files, nil
+}
+
+// DetailSubtitles godoc
+// @Summary      Json Subtitle
+// @Description  Json Subtitle
+// @Tags         Subtitles
+// @Param        id	path	string	true	"ID"
+// @Accept       json
+// @Produce      json
+// @Router       /subtitles/{id}/json [get]
+func (s *SubtitleController) Json(ctx *gin.Context) {
+	subtitle := model.Subtitle{}
+	gorn.DB.Where("id = ?", ctx.Param("id")).First(&subtitle)
+	path := "./public/subtitles/"
+
+	files, err := readZipFile(path + subtitle.FileName)
+	if err != nil {
+		s.FlashError(ctx, err.Error(), nil)
+		return
+	}
+
+	s.FlashSuccess(ctx, "ok", map[string]any{"files": files})
 }
