# api/docs/swagger.json
@@ -169,6 +169,31 @@
                 ],
                 "responses": {}
             }
+        },
+        "/subtitles/{id}/json": {
+            "get": {
+                "description": "Json Subtitle",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Subtitles"
+                ],
+                "summary": "Json Subtitle",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     }
 }
